--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "bulma": "^0.9.4",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.1",
     "primevue": "^3.48.0",
     "v-calendar": "^3.1.2",
     "vue": "^3.2.13",
