--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.9.4",
     "core-js": "^3.8.3",
     "html2pdf.js": "^0.10.1",
+    "primeicons": "^7.0.0",
     "primevue": "^3.48.0",
     "v-calendar": "^3.1.2",
     "vue": "^3.2.13",
@@ -26,8 +27,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.8"
   },
   "eslintConfig": {
     "root": true,
